# SmartTimerApp

./: AddTimerDialog.cpp  AddTimerDialog.h  CMakeLists.txt  EditTimerDialog.cpp  EditTimerDialog.h  TimerManager.cpp  TimerManager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
